--- a/index.html
+++ b/index.html
@@ -88,38 +88,39 @@
           <div class="first-rectangle">
             <div class="bluetop pt-2 pb-4 px-4">
               <div class="row">
-                <div class="col-lg-8 col-xs-12">
+                <div class="col-lg-12 col-xs-12 text-right">
+                  <b class="update p-1">
+                    UPDATED MAY,2019
+                  </b>
+                </div>
+                <div class="col-lg-12 col-xs-12">
                   <h3 class="p-32">
                     Greystone Tower,
                     Victoria Island – Lagos
                   </h3>
                 </div>
-                <div class="col-lg-4 col-xs-12 text-right">
-                  <b class="update p-1">
-                    UPDATED MAY,2019
-                  </b>
-                </div>
+
                 <div class="col-12">
                   <p class="p-14">
                     Corner of Idowu Taylor Street and Engineering Close, Victoria Island – Lagos.
                   </p>
                 </div>
-                <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-sm-6 col-md">
                   <img src="../img/Calendar.png" alt="" height="19px"><br>
                   <small class="pl-12">Date of Approval</small><br>
                   <b class="p-14">March, 2020</b>
                 </div>
-                <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-sm-6 col-md">
                   <img src="../img/Calendar.png" alt="" height="19px"><br>
                   <small class="pl-12">Exp. Completion</small><br>
                   <b class="p-14">March, 2020</b>
                 </div>
-                <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-sm-6 col-md">
                   <img src="../img/size.png" alt="" height="17px"><br>
                   <small class="pl-12">Size</small><br>
                   <b class="p-14">March, 2020</b>
                 </div>
-                <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-sm-6 col-md">
                   <img src="../img/Floor.png" alt="" height="17px"><br>
                   <small class="pl-12">Floors</small><br>
                   <b class="p-14">March, 2020</b>
@@ -127,7 +128,7 @@
 
               </div>
             </div>
-            <div class="row p-lg-4">
+            <div class="row p-4">
               <div class="col-12 mb-4">
                 <small class="pl-14">Developer</small><br>
                 <b class="p-14">Dolapo Omidire</b>
@@ -192,7 +193,9 @@
 
           </p>
           <p class="pl-14 pl-14-23">
-            Reach out to Obiajulu Uzoigwe on <a href="mailto:obiajulu.uzoigwe@cwexcellerate.com">obiajulu.uzoigwe@cwexcellerate.com</a> at Cushman & Wakefield for inquiries.
+            Reach out to Obiajulu Uzoigwe on <a
+              href="mailto:obiajulu.uzoigwe@cwexcellerate.com">obiajulu.uzoigwe@cwexcellerate.com</a> at Cushman &
+            Wakefield for inquiries.
 
 
           </p>
@@ -206,7 +209,7 @@
             <div class="container px-lg-5">
               <div class="row p-2">
                 <div class="col-lg-5 col-xs-12">
-                  <img src="img/Group 19.png" alt="">
+                  <img src="img/Group 19.png" alt="" class="img-fluid">
                 </div>
                 <div class="col-lg-6 col-xs-12 py-5">
                   <h3>
@@ -216,12 +219,12 @@
                     </b>
                   </h3>
                   <p class="pl-18">
-                      View over <b>300+</b> more projects when you access the 
-                      Estate Intel web app.
+                    View over <b>300+</b> more projects when you access the
+                    Estate Intel web app.
                   </p>
                   <form action="" class="form-inline">
-                    <input type="email" placeholder="Email address" class="white_form form-control">
-                    <button class="btn btn-blue ml-lg-3 px-4" style="height: 49px;">Get Started Free</button>
+                    <input type="email" placeholder="Email address" class="white_form form-control mb-3">
+                    <button class="btn btn-blue ml-lg-3 px-4 mb-3" style="height: 49px;">Get Started Free</button>
                   </form>
                 </div>
               </div>
@@ -363,7 +366,7 @@
           <div class="bluebox">
             <div class="row">
               <div class="col-lg-6 col-xs-12">
-                <img src="img/image 2.1.png" alt="">
+                <img src="img/image 2.1.png" alt="" class="img-fluid">
               </div>
               <div class="col-lg-6 col-xs-12">
                 <p class="w-36">
@@ -389,10 +392,10 @@
       <div class="inner py-5">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-xs-12">
+            <div class="col-lg-3 col-sm-6 col-xs-12 mb-3">
               <img src="img/ei-logo-white.png" alt="white-logo">
             </div>
-            <div class="col-lg-2 col-xs-12">
+            <div class="col-lg-2 col-sm-6 col-xs-12 mb-3">
               <p>
                 <b class="w-16">
                   Services
@@ -406,7 +409,7 @@
               <p><a href="#" class="w-14">Insight Research</a></p>
               <p><a href="#" class="w-14">Adverts</a></p>
             </div>
-            <div class="col-lg-2 col-xs-12">
+            <div class="col-lg-2 col-sm-6 col-xs-12 mb-3">
               <p>
                 <b class="w-16">
                   Products for
@@ -419,7 +422,7 @@
               <p><a href="#" class="w-14">Owners & Managers</a></p>
               <p><a href="#" class="w-14">Brokers & Surveyors</a></p>
             </div>
-            <div class="col-lg-2 col-xs-12">
+            <div class="col-lg-2 col-sm-6 col-xs-12 mb-3">
               <p>
                 <b class="w-16">
                   Company
@@ -432,7 +435,7 @@
               <p><a href="#" class="w-14">Help</a></p>
 
             </div>
-            <div class="col-lg-3 col-xs-12">
+            <div class="col-lg-3 col-xs-12 mb-3">
               <p>
                 <b class="w-16">Insights Early. For You</b>
               </p>
