--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro&display=swap" rel="stylesheet">
 
   <title></title>
@@ -456,7 +457,23 @@
                 Subscribe Now
               </button>
             </div>
-            <div class="col-12 mt-4 border-top"></div>
+            <div class="col-12 mt-4 border-top">
+              <div class="d-flex row mt-2">
+                <div class="mb-3">
+                  <img src="img/image.png" alt="rics">
+                </div>
+                <div class="ml-lg-auto mb-3 text-right">
+                  <a href="#" class="pl-4 ico "><i class="fab fa-facebook-f"></i></a>
+                  <a href="#" class="pl-4 ico "><i class="fab fa-linkedin-in"></i></a>
+                  <a href="#" class="pl-4 ico "><i class="fab fa-twitter"></i></a>
+                  <a href="#" class="pl-4 ico "><i class="fab fa-instagram"></i></a>
+                  <a href="#" class="pl-4 ico "><img src="img/YouTube.png" alt=""></a><br>
+                  <small class="w-14">
+                      Copyright © 2019 Estate Intel. All rights reserved
+                  </small>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
