--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <nav class="navbar fixed navbar-expand-md navbar-light py-0">
+  <nav class="navbar fixed-top navbar-expand-md navbar-light py-0">
     <div class="container py-0">
       <a href="index.html" class="navbar-brand">
         <img src="img/ei-logo.png" alt="">
